--- a/notes/app/src/main/res/layout/activity_setalarm.xml
+++ b/notes/app/src/main/res/layout/activity_setalarm.xml
@@ -1,9 +1,47 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".SetAlarm">
 
-</android.support.constraint.ConstraintLayout>
+    <Button
+        android:id="@+id/btnset_time"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginBottom="112dp"
+        android:layout_marginStart="52dp"
+        android:text="set time" />
+
+    <Button
+        android:id="@+id/btnset_date"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_alignTop="@+id/btnset_time"
+        android:layout_marginEnd="61dp"
+        android:text="set date" />
+
+    <TextView
+        android:id="@+id/textView_time"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignTop="@+id/textView_date"
+        android:layout_marginStart="70dp"
+        android:text="time" />
+
+    <TextView
+        android:id="@+id/textView_date"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginEnd="78dp"
+        android:layout_marginTop="202dp"
+        android:text="TextVie"
+        tools:text="date" />
+</RelativeLayout>
