--- a/notes/app/src/main/res/layout/activity_notecreate.xml
+++ b/notes/app/src/main/res/layout/activity_notecreate.xml
@@ -5,6 +5,10 @@
     android:layout_width="wrap_content"
     android:layout_height="match_parent"
     tools:context=".NoteCreate">
+    <ImageView
+        android:id="@+id/img"
+        android:layout_width="300dp"
+        android:layout_height="300dp" />
 
     <Button
         android:id="@+id/image"
