--- a/notes/app/src/main/res/layout/activity_notelist.xml
+++ b/notes/app/src/main/res/layout/activity_notelist.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".NoteList">
+    tools:context=".NoteList"
+    android:background="#000">
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/floatingActionButton"
@@ -21,6 +22,7 @@
     <ListView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/list1" >
+        android:id="@+id/list1"
+        android:background="@null">
     </ListView>
 </RelativeLayout>
