--- a/notes/app/src/main/res/layout/activity_notelist.xml
+++ b/notes/app/src/main/res/layout/activity_notelist.xml
@@ -19,10 +19,10 @@
         android:onClick="add"
         app:srcCompat="@android:drawable/ic_input_add" />
 
-    <ListView
+    <android.support.v7.widget.RecyclerView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/list1"
         android:background="@null">
-    </ListView>
+    </android.support.v7.widget.RecyclerView>
 </RelativeLayout>
