--- a/notes/app/src/main/res/layout/row.xml
+++ b/notes/app/src/main/res/layout/row.xml
@@ -2,50 +2,59 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_height="wrap_content"
     android:layout_width="match_parent"
-    android:padding="5dp">
-<android.support.v7.widget.CardView
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    app:cardElevation="@dimen/cardview_default_elevation"
-    app:cardCornerRadius="@dimen/cardview_default_radius">
+    android:paddingTop="10dp"
+    android:paddingStart="10dp"
+    android:paddingEnd="10dp"
+    android:id="@+id/row_layout">
 
-    <LinearLayout
+    <android.support.v7.widget.CardView xmlns:app="http://schemas.android.com/apk/res-auto"
+
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
-    <ImageView
-        android:id="@+id/icon"
-        android:layout_width="60dp"
-        android:layout_height="60dp"
-        android:padding="5dp"/>
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        app:cardCornerRadius="@dimen/cardview_default_radius"
+        app:cardElevation="@dimen/cardview_default_elevation"
+        android:minHeight="75dp">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
-
-        <TextView
-            android:id="@+id/text1"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="10dp"
-            android:layout_marginTop="5dp"
-            android:padding="2dp"
-            android:text="medium text"
-            android:textColor="#33cc33" />
+            android:orientation="vertical"
+            android:background="#fff">
+            <TextView
+                android:id="@+id/text2"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Time to be shown here"
+                android:textColor="#4f4f4f"
+                android:gravity="center"
+                android:padding="8dp"
+                android:background="#efefef"
+                android:textStyle="bold"
+                android:textSize="18sp"
+                />
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/text2"
-            android:layout_marginStart="10dp"
-            android:text="TextView"
-            android:textColor="#fff"/>
+            <ImageView
+                    android:id="@+id/icon"
+                    android:layout_width="match_parent"
+                android:scaleType="centerCrop"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/ic_launcher_background"/>
 
-    </LinearLayout>
-    </LinearLayout>
+            <TextView
+                android:id="@+id/text1"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:text="medium text"
+                android:textColor="#33cc33"
+                android:gravity="center"
+                android:padding="16dp"
+                android:textSize="22sp"
+                android:textStyle="italic"/>
 
-</android.support.v7.widget.CardView>
+        </LinearLayout>
+
+    </android.support.v7.widget.CardView>
 
 </RelativeLayout>
