--- a/notes/app/src/main/res/layout/activity_notecreate.xml
+++ b/notes/app/src/main/res/layout/activity_notecreate.xml
@@ -1,65 +1,57 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".NoteCreate">
-    <ImageView
-        android:id="@+id/img"
-        android:layout_width="300dp"
-        android:layout_height="300dp" />
+    android:paddingBottom="16dp"
+    android:paddingRight="64dp"
+    android:paddingTop="16dp"
+    android:paddingLeft="64dp"
+    tools:context=".MainActivity">
 
-    <Button
-        android:id="@+id/image"
+    <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignTop="@+id/alarm"
-        android:layout_marginStart="97dp"
-        android:text="image"
-        android:onClick="addimage"/>
-
-    <Button
-        android:id="@+id/alarm"
+        android:text="Hello World!"
+        />
+    <android.support.design.widget.FloatingActionButton
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:layout_alignTop="@+id/close"
-        android:layout_marginEnd="98dp"
-        android:text="alarm"
-        android:onClick="setalarm"/>
+        android:layout_gravity="bottom|end"
+        android:layout_marginRight="@dimen/fab_margin_right"
+        android:layout_marginBottom="160dp"
+        android:src="@drawable/image"
+        android:elevation="6dp"
+        android:id="@+id/pic"
+        app:pressedTranslationZ="12dp"
+        app:backgroundTint="@color/front_color"
+        android:visibility="invisible"/>
 
-    <Button
-        android:id="@+id/close"
+
+    <android.support.design.widget.FloatingActionButton
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginBottom="139dp"
-        android:text="close"
-        android:onClick="close"/>
+        android:layout_gravity="bottom|end"
+        android:layout_marginRight="@dimen/fab_margin_right"
+        android:layout_marginBottom="85dp"
+        android:src="@drawable/alarm"
+        android:elevation="6dp"
+        android:id="@+id/time"
+        app:pressedTranslationZ="12dp"
+        app:backgroundTint="@color/back_color"
+        android:visibility="invisible"/>
 
-
-    <Button
-        android:id="@+id/save"
+    <android.support.design.widget.FloatingActionButton
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignTop="@+id/close"
-        android:text="save"
-        android:onClick="save"/>
+        android:layout_gravity="bottom|end"
+        android:layout_marginRight="@dimen/fab_margin_right"
+        android:layout_marginBottom="16dp"
+        android:src="@drawable/add"
+        android:elevation="6dp"
+        android:id="@+id/fab"
+        app:pressedTranslationZ="12dp"/>
 
-    <EditText
-        android:id="@+id/note"
-        android:layout_width="378dp"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginStart="0dp"
-        android:layout_marginTop="67dp"
-        android:ems="10"
-        android:hint="write your note"
-        android:inputType="textMultiLine" />
-
-</RelativeLayout>
+</android.support.design.widget.CoordinatorLayout>
