--- a/notes/app/src/main/res/layout/activity_notecreate.xml
+++ b/notes/app/src/main/res/layout/activity_notecreate.xml
@@ -1,57 +1,97 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.design.widget.CoordinatorLayout
+    android:id="@+id/coordinate"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:layout_height="match_parent">
+<LinearLayout
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="16dp"
-    android:paddingRight="64dp"
-    android:paddingTop="16dp"
-    android:paddingLeft="64dp"
-    tools:context=".MainActivity">
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"
-        />
-    <android.support.design.widget.FloatingActionButton
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom|end"
-        android:layout_marginRight="@dimen/fab_margin_right"
-        android:layout_marginBottom="160dp"
-        android:src="@drawable/image"
-        android:elevation="6dp"
+    android:orientation="vertical">
+    <ImageView
         android:id="@+id/pic"
-        app:pressedTranslationZ="12dp"
-        app:backgroundTint="@color/front_color"
-        android:visibility="invisible"/>
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"/>
 
+<LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="horizontal"
+    android:layout_gravity="bottom">
+    <EditText
+    android:id="@+id/editText"
+    android:layout_width="0dp"
+        android:layout_weight="1"
+    android:layout_height="wrap_content"
+    android:inputType="textPersonName"
+    android:hint="Write your note..."
+        android:layout_marginEnd="4dp"/>
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/fab"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:elevation="6dp"
+        android:src="@drawable/add"
+        app:pressedTranslationZ="12dp"
+        android:layout_margin="8dp"/>
+
+</LinearLayout>></LinearLayout>
+    <android.support.design.widget.FloatingActionButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|end"
+        android:layout_marginRight="8dp"
+        android:layout_marginBottom="280dp"
+        android:src="@drawable/close"
+        android:id="@+id/addclose"
+        android:elevation="6dp"
+        app:pressedTranslationZ="12dp"
+        app:backgroundTint="@color/colorAccent"
+        android:visibility="invisible"
+        android:onClick="close"/>
 
     <android.support.design.widget.FloatingActionButton
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
-        android:layout_marginRight="@dimen/fab_margin_right"
-        android:layout_marginBottom="85dp"
-        android:src="@drawable/alarm"
+        android:layout_marginRight="8dp"
+        android:layout_marginBottom="210dp"
+        android:src="@drawable/addimage"
+        android:elevation="6dp"
+        app:pressedTranslationZ="12dp"
+        app:backgroundTint="@color/colorAccent"
+        android:visibility="invisible"
+        android:id="@+id/img"
+        android:onClick="addimage"/>
+
+    <android.support.design.widget.FloatingActionButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|end"
+        android:layout_marginRight="8dp"
+        android:layout_marginBottom="140dp"
+        android:src="@drawable/savebutton"
+        android:elevation="6dp"
+        android:id="@+id/addsave"
+        app:pressedTranslationZ="12dp"
+        app:backgroundTint="@color/colorAccent"
+        android:visibility="invisible"
+        android:onClick="save"/>
+
+    <android.support.design.widget.FloatingActionButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|end"
+        android:layout_marginRight="8dp"
+        android:layout_marginBottom="70dp"
+        android:src="@drawable/addalarm"
         android:elevation="6dp"
         android:id="@+id/time"
         app:pressedTranslationZ="12dp"
-        app:backgroundTint="@color/back_color"
-        android:visibility="invisible"/>
-
-    <android.support.design.widget.FloatingActionButton
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom|end"
-        android:layout_marginRight="@dimen/fab_margin_right"
-        android:layout_marginBottom="16dp"
-        android:src="@drawable/add"
-        android:elevation="6dp"
-        android:id="@+id/fab"
-        app:pressedTranslationZ="12dp"/>
-
+        app:backgroundTint="@color/colorAccent"
+        android:visibility="invisible"
+        android:onClick="setalarm"/>
 </android.support.design.widget.CoordinatorLayout>
