--- a/notes/app/src/main/res/layout/activity_notelist.xml
+++ b/notes/app/src/main/res/layout/activity_notelist.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".NoteList"
-    android:background="#f8bbd0">
+    android:background="#FFF">
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/floatingActionButton"
