--- a/notes/app/src/main/res/layout/row.xml
+++ b/notes/app/src/main/res/layout/row.xml
@@ -1,21 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_height="wrap_content"
-    android:layout_width="match_parent"
-    android:paddingTop="10dp"
-    android:paddingStart="10dp"
-    android:paddingEnd="10dp"
-    android:id="@+id/row_layout">
-
     <android.support.v7.widget.CardView xmlns:app="http://schemas.android.com/apk/res-auto"
-
-        android:layout_width="match_parent"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+android:id="@+id/row_layout"
+    android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         app:cardCornerRadius="@dimen/cardview_default_radius"
-        app:cardElevation="@dimen/cardview_default_elevation"
-        android:minHeight="75dp">
+        app:cardElevation="4dp"
+        android:minHeight="75dp"
+    android:layout_margin="4dp">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -27,10 +21,10 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Time to be shown here"
-                android:textColor="#4f4f4f"
+                android:textColor="#FFF"
                 android:gravity="center"
                 android:padding="8dp"
-                android:background="#efefef"
+                android:background="@color/colorAccent"
                 android:textStyle="bold"
                 android:textSize="18sp"
                 />
@@ -47,8 +41,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:text="medium text"
-                android:textColor="#33cc33"
+                android:textColor="#000"
                 android:gravity="center"
+                android:background="#efefef"
                 android:padding="16dp"
                 android:textSize="22sp"
                 android:textStyle="italic"/>
@@ -56,5 +51,3 @@
         </LinearLayout>
 
     </android.support.v7.widget.CardView>
-
-</RelativeLayout>
