--- a/notes/app/src/main/res/values/styles.xml
+++ b/notes/app/src/main/res/values/styles.xml
@@ -8,25 +8,32 @@
         <item name="colorAccent">#00bcd4</item>
     </style>
 
-    <style name="RedAppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+    <style name="OrangeAppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
         <!-- Customize your theme here. -->
-        <item name="colorPrimary">#f44336</item>
-        <item name="colorPrimaryDark">#d32f2f</item>
-        <item name="colorAccent">#7c4dff</item>
-    </style>
-
-    <style name="TealAppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
-        <!-- Customize your theme here. -->
-        <item name="colorPrimary">#009688</item>
-        <item name="colorPrimaryDark">#00796b</item>
-        <item name="colorAccent">#ff5722</item>
+        <item name="colorPrimary">#ff5722</item>
+        <item name="colorPrimaryDark">#e64a19</item>
+        <item name="colorAccent">#009688</item>
     </style>
 
     <style name="GreenAppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
         <!-- Customize your theme here. -->
         <item name="colorPrimary">#4caf50</item>
         <item name="colorPrimaryDark">#388e3c</item>
-        <item name="colorAccent">#ffc107</item>
+        <item name="colorAccent">#795548</item>
+    </style>
+
+    <style name="LimeAppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+        <!-- Customize your theme here. -->
+        <item name="colorPrimary">#cddc39</item>
+        <item name="colorPrimaryDark">#afb42b</item>
+        <item name="colorAccent">#9e9e9e</item>
+    </style>
+
+    <style name="PurpleAppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+        <!-- Customize your theme here. -->
+        <item name="colorPrimary">#9c27b0</item>
+        <item name="colorPrimaryDark">#7b1fa2</item>
+        <item name="colorAccent">#ff4081</item>
     </style>
 
     <style name="cookie">
