--- a/notes/app/src/main/res/drawable/size.xml
+++ b/notes/app/src/main/res/drawable/size.xml
@@ -8,6 +8,6 @@
     <path
         android:pathData="M0 0h24v24H0z" />
     <path
-        android:fillColor="#9C0063"
+        android:fillColor="#000"
         android:pathData="M9 4v3h5v12h3V7h5V4H9zm-6 8h3v7h3v-7h3V9H3v3z" />
 </vector>
