--- a/notes/app/src/main/res/drawable/style.xml
+++ b/notes/app/src/main/res/drawable/style.xml
@@ -6,7 +6,7 @@
     android:viewportHeight="24">
 
     <path
-        android:fillColor="#9C0063"
+        android:fillColor="#000"
         android:pathData="M5 17v2h14v-2H5zm4.5-4.2h5l0.9 2.2h2.1L12.75 4h-1.5L6.5 15h2.1l0.9-2.2zM12 5.98L13.87 11h-3.74L12 5.98z" />
     <path
         android:pathData="M0 0h24v24H0z" />
