--- a/notes/app/src/main/res/layout/activity_setalarm.xml
+++ b/notes/app/src/main/res/layout/activity_setalarm.xml
@@ -25,6 +25,17 @@
         android:layout_marginEnd="61dp"
         android:text="set date" />
 
+    <Button
+        android:id="@+id/btnset_alarm"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignStart="@+id/btnset_time"
+        android:layout_marginBottom="45dp"
+        android:layout_marginVertical="45dp"
+        android:text="set alarm" />
+
+
     <TextView
         android:id="@+id/textView_time"
         android:layout_width="wrap_content"
@@ -42,6 +53,14 @@
         android:layout_alignParentTop="true"
         android:layout_marginEnd="78dp"
         android:layout_marginTop="202dp"
-        android:text="TextVie"
-        tools:text="date" />
+        android:text="Date"/>
+
+    <Button
+        android:id="@+id/btnset_cancel"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignStart="@+id/btnset_date"
+        android:layout_alignTop="@+id/btnset_alarm"
+        android:text="Cancel Alarm"
+        android:onClick="cancel"/>
 </RelativeLayout>
