--- a/notes/app/src/main/res/layout/activity_setalarm.xml
+++ b/notes/app/src/main/res/layout/activity_setalarm.xml
@@ -4,63 +4,106 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context=".SetAlarm">
-
-    <Button
-        android:id="@+id/btnset_time"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginBottom="112dp"
-        android:layout_marginStart="52dp"
-        android:text="set time" />
-
-    <Button
-        android:id="@+id/btnset_date"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:layout_alignTop="@+id/btnset_time"
-        android:layout_marginEnd="61dp"
-        android:text="set date" />
-
-    <Button
-        android:id="@+id/btnset_alarm"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignStart="@+id/btnset_time"
-        android:layout_marginBottom="45dp"
-        android:layout_marginVertical="45dp"
-        android:text="set alarm" />
-
 
     <TextView
         android:id="@+id/textView_time"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignTop="@+id/textView_date"
-        android:layout_marginStart="70dp"
-        android:text="time" />
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="39dp"
+        android:gravity="center"
+        android:text="Time"
+        android:textAlignment="center"
+        android:textSize="18dp"
+        android:textStyle="bold" />
+<LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="horizontal">
+
+    <Button
+        android:id="@+id/btnset_time"
+        style="@style/Widget.AppCompat.Button.Colored"
+        android:layout_width="165dp"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginLeft="110dp"
+        android:layout_centerInParent="true"
+        android:layout_marginTop="90dp"
+        android:text="set time"
+        android:textAlignment="center"/>
+</LinearLayout>
+
 
     <TextView
         android:id="@+id/textView_date"
-        android:layout_width="wrap_content"
+        android:layout_width="62dp"
         android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
         android:layout_alignParentTop="true"
-        android:layout_marginEnd="78dp"
-        android:layout_marginTop="202dp"
-        android:text="Date"/>
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="181dp"
+        android:gravity="center"
+        android:text="Date"
+        android:textAlignment="center"
+        android:textSize="18dp"
+        android:textStyle="bold" />
 
-    <Button
-        android:id="@+id/btnset_cancel"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignStart="@+id/btnset_date"
-        android:layout_alignTop="@+id/btnset_alarm"
-        android:text="Cancel Alarm"
-        android:onClick="cancel"/>
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:orientation="horizontal">
+
+        <Button
+            android:id="@+id/btnset_date"
+            style="@style/Widget.AppCompat.Button.Colored"
+            android:layout_width="165dp"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:layout_marginLeft="110dp"
+            android:layout_marginTop="220dp"
+            android:gravity="center"
+            android:text="set date"
+            android:textAlignment="center"/>
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginLeft="14dp"
+        android:orientation="horizontal">
+
+        <Button
+            android:id="@+id/btnset_alarm"
+            style="@style/Widget.AppCompat.Button.Colored"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_alignTop="@+id/btnset_cancel"
+            android:layout_toStartOf="@+id/textView_date"
+            android:layout_weight="1"
+            android:textAlignment="center"
+            android:text="Set Alarm" />
+
+        <Button
+            android:id="@+id/btnset_cancel"
+            style="@style/Widget.AppCompat.Button.Colored"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_marginBottom="87dp"
+            android:layout_toEndOf="@+id/btnset_date"
+            android:layout_weight="1"
+            android:textAlignment="center"
+            android:text="Cancel Alarm" />
+
+    </LinearLayout>
 </RelativeLayout>
