--- a/notes/app/src/main/res/layout/activity_notecreate.xml
+++ b/notes/app/src/main/res/layout/activity_notecreate.xml
@@ -20,7 +20,8 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
-    android:layout_gravity="bottom">
+    android:layout_gravity="bottom"
+    android:id="@+id/fabutton">
     <EditText
     android:id="@+id/editText"
     android:layout_width="0dp"
