--- a/notes/app/src/main/res/layout/activity_setalarm.xml
+++ b/notes/app/src/main/res/layout/activity_setalarm.xml
@@ -42,7 +42,7 @@
 
     <TextView
         android:id="@+id/textView_date"
-        android:layout_width="62dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
